<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Clock</string>
    <string name="iconImageDescription">Icon</string>

    <!-- Menu -->
    <!-- <string name="mnuQuit">Quit</string> -->
    <string name="mnuOptions">Preferences</string>
    <string name="mnuReset">Reset</string>

    <!-- Preference Activity -->
    <string name="prefsActivity_title">Preferences</string>
    <string name="prefPlayerCategory">Player Category</string>
    <string name="playerOne_minutes">Players Time</string>
    <string name="player_minutes_summary">minutes</string>
    <string name="check_sametime">Time difference</string>
    <string name="check_sametime_summary">Allow players to have different time settings</string>
    <string name="playerTwo_minutes">Player Two</string>
    <string name="dialog_title_list">Choose One</string>
    <string name="prefGameType">Game Type</string>
    <string name="gameType">Time Control</string>
    <string name="gameType_summary">game</string>
    <string name="timeDelay">Time Delay</string>
    <string name="timeDelay_summary">seconds</string>
    <string name="prefCat_Pal">Be a Pal</string>
    <string name="prefDon_title">Donation</string>
    <string name="prefDon_summ">Are you feeling generous?</string>
    <string name="prefFeed_title">Feeback</string>
    <string name="prefFeed_summ">Tell what you think</string>
    <string name="prefCat_info">Information</string>
    <string name="prefInfo_title">Chronoid v1.0</string>
    <string name="prefInfo_summ">GNU GPL License v3 - 2012</string>

    <!-- Donation -->
    <string name="donationSummary">Chronoid is a free and open source app. You can support it with a small donation.\n\nAny donations will help to keep my apps free and regularly updated.\n\nDonation is easy: touch any of the beers below and you will be redirected to Google Play where you can make a little Donation.</string>
    <string name="donationOne">€ 1.00</string>
    <string name="donationTwo">€ 2.00</string>
    <string name="donationFive">€ 5.00</string>
    <string name="donationTen">€ 10.00</string>

    <!-- Paused -->
    <string name="paused_acitivity_title">Game Clock - Paused</string>
    <string name="paused_activity">Game Paused</string>

</resources>