<?xml version="1.0" encoding="utf-8"?>
<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" -->
<!--     android:layout_width="fill_parent" -->
<!--     android:layout_height="fill_parent" -->
<!--     android:orientation="vertical" > -->

<!--     <LinearLayout -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:background="#222222" -->
<!--         android:orientation="horizontal" > -->

<!--         <ImageView -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_margin="5dp" -->
<!--             android:background="@drawable/icon" -->
<!--             android:contentDescription="@string/iconImageDescription" /> -->

<!--         <TextView -->
<!--             android:layout_width="wrap_content" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_marginTop="15dp" -->
<!--             android:text="@string/app_name" -->
<!--             android:textColor="@color/themeColor" -->
<!--             android:textSize="25dp" -->
<!--             android:typeface="normal" /> -->
<!--     </LinearLayout> -->

<!--     <LinearLayout -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="1dp" -->
<!--         android:background="#666666" -->
<!--         android:orientation="horizontal" /> -->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:text="@string/donationSummary"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtGlass"
                    style="@style/donationImage"
                    android:drawableTop="@drawable/glass_beer"
                    android:text="@string/donationOne" />

                <TextView
                    android:id="@+id/txtPint"
                    style="@style/donationImage"
                    android:drawableTop="@drawable/pint_beer"
                    android:text="@string/donationTwo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/txtMug"
                    style="@style/donationImage"
                    android:layout_marginBottom="30dip"
                    android:drawableTop="@drawable/mug_beer"
                    android:text="@string/donationFive" />

                <TextView
                    android:id="@+id/txtBarrel"
                    style="@style/donationImage"
                    android:layout_marginBottom="30dip"
                    android:drawableTop="@drawable/barrel_beer"
                    android:text="@string/donationTen" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
<!-- </LinearLayout> -->
